@@ -236,6 +236,7 @@ void DirCmpReport::WriteString(LPCTSTR pszText)
 		cchAhead -= cchLine;
 	}
 	m_pFile->Write(pchOctets, cchAhead);
+	free((void*)pchOctets);
 }
 
 /**
